cmake_minimum_required(VERSION 4.0)
project(Solved_Problem)

set(CMAKE_CXX_STANDARD 14)

add_executable(Solved_Problem
        1.cpp
        1058_B.cpp
        1065_A.cpp
        1065_B.cpp
        1065_C1.cpp
        124A.cpp
        1327A.cpp
        1343C.cpp
        1352c.cpp
        1353B.cpp
        1353c.cpp
        1363A.cpp
        1370A.cpp
        1476A.cpp
        1520D.cpp
        1624B.cpp
        1742A.cpp
        1742c.cpp
        1744C.cpp
        1850D.cpp
        1870A.cpp
        1883B.cpp
        1926A.c
        1941C.cpp
        1971c.cpp
        1985C.cpp
        1985D.cpp
        1992A.cpp
        1999B.cpp
        2.cpp
        2039A.cpp
        2067A.cpp
        2069A.cpp
        2070A.cpp
        2071A.cpp
        2072B.cpp
        2074.cpp
        2074A.cpp
        2074B.cpp
        2074C.cpp
        2075A.cpp
        2078A.cpp
        2078A1.cpp
        2082A.cpp
        2082B.cpp
        2084A.cpp
        2084B.cpp
        2085A.cpp
        2086A.cpp
        2086B.cpp
        2090A.cpp
        2090B.cpp
        2091A.cpp
        2091A2.cpp
        2091B.cpp
        2091C.cpp
        2091D.cpp
        2092B.cpp
        2092B2.cpp
        2092C.cpp
        2093A.cpp
        2093B.cpp
        2093C.cpp
        2094A.cpp
        2094B.cpp
        2094C.cpp
        2094D.cpp
        2096A.cpp
        2157A.cpp
        2160A.cpp
        2160B.cpp
        2161A.cpp
        2171B.cpp
        2172A.cpp
        26A.cpp
        270A.cpp
        279B.cpp
        3.cpp
        313B.cpp
        320A.cpp
        327A.cpp
        363B.cpp
        433B.cpp
        450A.cpp
        456A.cpp
        474A.cpp
        474B.cpp
        492B.cpp
        499B.cpp
        4c.cpp
        577A.cpp
        749A.cpp
        760B.cpp
        977C.cpp
        9A.cpp
        aa.cpp
        BFS_AdjacencyList.cpp
        BFS_AdjacencyMatrix.cpp
        binary2dSearch.cpp
        BinaryoperatorOverloading.cpp
        binarySearch.cpp
        binarySearchTree.cpp
        binaryTree.cpp
        calculator.cpp
        cost_sell.cpp
        deletefromarray.cpp
        Diamond.cpp
        DoubleLinkedList.cpp
        emum.cpp
        end0.cpp
        equalsubarray.cpp
        ff.cpp
        freq.cpp
        hello.cpp
        insertinarray.cpp
        insertionSort.cpp
        isomorphic.cpp
        linked.cpp
        linked2.cpp
        linkedclass.cpp
        longestPrefixStr.cpp
        love.cpp
        love1.cpp
        marge.cpp
        matrixgun.cpp
        mountainBianry.cpp
        p.cpp
        pattern1.cpp
        pointer.cpp
        pointer1.cpp
        positionsum.cpp
        pratice.cpp
        pratice2.cpp
        pratice3.cpp
        pratice4.cpp
        pratice5.cpp
        prefixsum.cpp
        queue.cpp
        rangeBinarySearch.cpp
        replacestr.cpp
        reversearray.cpp
        sdd.cpp
        selectionSort.cpp
        simple.cpp
        sortstr.cpp
        spiralMatrix.cpp
        ss.cpp
        ss1.cpp
        stringSot.cpp
        strsameornot.cpp
        sum_while.cpp
        temp.cpp
        tempCodeRunnerFile.cpp
        threeSorting.cpp
        transpose.cpp
        two_sum.cpp
        unarryOperator.cpp
        vector.cpp
        vectorpra.cpp
        vectorrev.cpp)
